--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/HR_MANAGEMENT_SYSTEM?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Myp@llyisno1
+
+server.port=8081
+
 
