Live reload enabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Myp@llyisno1
 server.port=8081
 
 server.servlet.context-path=/api/v1/
+spring.devtools.restart.enabled=true
