Spring Security added and security properties added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ server.port=8081
 
 server.servlet.context-path=/api/v1/
 spring.devtools.restart.enabled=true
+
+
+app.jwtSecret= secret
+app.jwtExpirationInMs= 3600000
